appId: com.duckduckgo.mobile.android
name: "Autofill: Search credentials"
---
# Pre-requisite: the user is viewing the password manager screen with some saved passwords added by a previous test step, on an autofill-eligible device

- tapOn:
    id: searchLogins

- assertVisible: user

- tapOn:
    id: omnibarTextInput
- inputText: "no match"

- assertVisible: "No results for.*"

- eraseText

- tapOn:
      id: omnibarTextInput
- inputText: "192"

- assertVisible: 192.168.0.100

- tapOn: "Navigate up"