appId: com.duckduckgo.mobile.android
name: "Autofill: Prompted to save and update credentials on web form"
---
# Pre-requisite: the user is viewing the new tab screen, on an autofill-eligible device

- tapOn:
    text: "search or type URL"
- eraseText
- inputText: "fill.dev/form/login-simple"
- pressKey: enter

- tapOn:
    text: "Got it"
    optional: true

- tapOn:
    id: "username"
- inputText: "user"
- tapOn:
    id: "password"
- inputText: "password1"
- tapOn:
    text: "Login"
- assertVisible: "Save Password"
- tapOn: "Save Password"
- pressKey: back
- tapOn: "Close Autofill Dialog"
- tapOn:
    id: "password"
- inputText: "password2"
- tapOn:
    text: "Login"
- assertVisible: "Update Password"
- tapOn: "Update Password"
- tapOn:
    id: "browserMenu"
- tapOn: "Passwords"
- tapOn: "user"
- tapOn:
    id: "internal_password_icon"
- assertVisible: "password2"