appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Will backfill username and use that to prompt to update if a matching password already stored"
tags:
    - autofillBackfillingUsername
---
# Pre-requisite: Requires app be built with -Pautofill-disable-auth-requirement flag to disable auth requirement

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../../shared/skip_all_onboarding.yaml
      - hideKeyboard

      # setup an existing credential
      - runFlow: ../steps/manually_add_existing_credential.yaml

      # get to autofill form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://autofill.me/form/login-simple"
      - pressKey: Enter
      - runFlow: ../steps/decline_autofill_prompt.yaml

      # simulate a partial login form by first submitting just the username
      - tapOn: "Username"
      - inputText: "existingUser"
      - pressKey: Back

      - tapOn:
          text: "Login"
          index: 1

      # now clear the username and submit just the password
      - tapOn: "existingUser"
      - doubleTapOn: "existingUser"
      - eraseText
      - pressKey: Back

      - tapOn: "Password"
      - inputText: "passwordFromForm"
      - pressKey: Back

      - tapOn:
          text: "Login"
          index: 1

      - assertVisible: "Update password for\ 

          existingUser?"
      - tapOn: "Update Password"

      # access the passwords screen and assert username and password both saved
      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "existingUser"
      - assertVisible: "existingUser"
      - assertVisible: "passwordFromForm"

