appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Will backfill username in a multi-step registration form with a manually entered password"
tags:
    - autofillBackfillingUsername
---
# Pre-requisite: Requires app be built with -Pautofill-disable-auth-requirement flag to disable auth requirement

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../../shared/skip_all_onboarding.yaml
      - hideKeyboard

      # get to autofill form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://autofill.me/form/registration-username"
      - pressKey: Enter

      # simulate a partial form submission by first submitting just the username
      - tapOn: "Username"
      - runFlow: ../steps/decline_in_browser_password_import.promo.yaml
      - tapOn: "Username"
      - inputText: "usernameFromBackfill"
      - tapOn: "Username"

      - pressKey: Back

      - tapOn:
          text: "Register"
          index: 1

      # now clear the username and submit just the password
      - tapOn: "usernameFromBackfill"
      - doubleTapOn: "usernameFromBackfill"
      - eraseText
      - pressKey: Back
      - tapOn: "Password"

      # decline to use autogenerated password
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/closeButton"

      - inputText: "passwordFromForm"
      - pressKey: Back

      - tapOn:
          text: "Register"
          index: 1

      - tapOn:
          id: "com.duckduckgo.mobile.android:id/saveLoginButton"

      # access the passwords screen and assert username and password both saved
      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "usernameFromBackfill"
      - assertVisible: "usernameFromBackfill"
      - assertVisible: "passwordFromForm"

      # Delete login
      - runFlow: "../steps/delete_login_from_credentials_details_screen.yaml"

