appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Will backfill username password reset flow using autogenerated password"
tags:
    - autofillBackfillingUsername
---
# Pre-requisite: Requires app be built with -Pautofill-disable-auth-requirement flag to disable auth requirement

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../../shared/skip_all_onboarding.yaml
      - hideKeyboard

      # get to autofill login form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://autofill.me/form/login-simple"
      - pressKey: Enter

      # simulate a partial login form by first submitting just the username
      - tapOn: "Username"
      - runFlow: ../steps/decline_in_browser_password_import.promo.yaml
      - tapOn: "Username"

      - inputText: "usernameFromBackfill"
      - pressKey: Back

      - tapOn:
          text: "Login"
          index: 1

      # get to password reset form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - eraseText
      - inputText: "https://autofill.me/form/change-password"
      - pressKey: Enter
      - runFlow: ../steps/decline_autofill_prompt.yaml

      - tapOn:
          id: "new-password"
      - runFlow: ../steps/accept_autogenerated_password.yaml

      - tapOn:
          text: "Change Password"
          index: 1

      - hideKeyboard

      # access the passwords screen and assert username and password both saved
      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "usernameFromBackfill"
      - assertVisible: "usernameFromBackfill"
      - assertVisible: ${maestro.copiedText}

      # Delete login
      - runFlow: "../steps/delete_login_from_credentials_details_screen.yaml"

