appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Will backfill username password reset flow using a generated password for existing credential. Should prompt to update."
tags:
    - autofillBackfillingUsername
---
# Pre-requisite: Requires app be built with -Pautofill-disable-auth-requirement flag to disable auth requirement

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../../shared/skip_all_onboarding.yaml
      - hideKeyboard

      # get to autofill login form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://autofill.me/form/login-simple"
      - pressKey: Enter

      # simulate a partial login form by first submitting just the username
      - tapOn: "Username"
      - runFlow: ../steps/decline_in_browser_password_import.promo.yaml
      - tapOn: "Username"

      - inputText: "existingUser"
      - pressKey: Back

      - tapOn:
          text: "Login"
          index: 1

      # get to password reset form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - eraseText
      - inputText: "https://autofill.me/form/change-password"
      - pressKey: Enter

      # Bit of a workaround to add an existing credential now, working around an autofill bug
      # where it wouldn't show the "use generated password" dialog automatically
      # when tapping on the password field if we have a saved login already when form loads
      - runFlow: ../steps/manually_add_existing_credential.yaml

      - tapOn:
          id: "new-password"

      - runFlow: ../steps/accept_autogenerated_password.yaml

      - tapOn:
          text: "Change Password"
          index: 1

      - assertVisible: "Update password for\ 

          existingUser?"
      - tapOn: "Update Password"

      # access the passwords screen and assert username and password both saved
      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "existingUser"
      - assertVisible: "existingUser"
      - assertVisible: ${maestro.copiedText}
