appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Will backfill username password reset flow using a manually entered password for existing credential"
tags:
    - autofillBackfillingUsername
---
# Pre-requisite: Requires app be built with -Pautofill-disable-auth-requirement flag to disable auth requirement

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../../shared/skip_all_onboarding.yaml
      - hideKeyboard

      # manually add a credential
      - runFlow: ../steps/manually_add_existing_credential.yaml

      # get to autofill login form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://autofill.me/form/login-simple"
      - pressKey: Enter
      - runFlow: ../steps/decline_autofill_prompt.yaml

      # simulate a partial login form by first submitting just the username
      - tapOn: "Username"
      - inputText: "existingUser"
      - pressKey: Back

      - tapOn:
          text: "Login"
          index: 1

      # get to password reset form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - eraseText
      - inputText: "https://autofill.me/form/change-password"
      - pressKey: Enter
      - runFlow: ../steps/decline_autofill_prompt.yaml

      - tapOn:
          id: "new-password"
      - inputText: "passwordFromForm"
      - pressKey: Back

      - tapOn:
          text: "Change Password"
          index: 1

      - assertVisible: "Update password for\ 

          existingUser?"
      - tapOn: "Update Password"

      # access the passwords screen and assert username and password both saved
      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "existingUser"
      - assertVisible: "existingUser"
      - assertVisible: "passwordFromForm"

      # Delete login
      - runFlow: "../steps/delete_login_from_credentials_details_screen.yaml"

