appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Autofill: Will autosave a credential when password generated, also contains an already-filled username"
tags:
    - autofillPasswordGeneration
---
# Pre-requisite: Requires app be built with -Pautofill-disable-auth-requirement flag to disable auth requirement

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../../shared/skip_all_onboarding.yaml
      - hideKeyboard

      # get to autofill form
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://autofill.me/form/registration-username"
      - pressKey: Enter

      - tapOn: "Username"
      - inputText: "usernameFromForm"
      - pressKey: Back

      - tapOn: "Password"
      - runFlow: ../steps/accept_autogenerated_password.yaml

      # access the passwords screen and assert username and password both saved, even before form submission
      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "usernameFromForm"
      - assertVisible: "usernameFromForm"
      - assertVisible: ${maestro.copiedText}

      - tapOn: "Navigate up"
      - tapOn: "Navigate up"

      - tapOn:
          text: "Register"
          index: 1

      - tapOn:
          text : "Always Fireproof"
          optional: true

      - runFlow: ../steps/access_passwords_screen.yaml
      - tapOn: "usernameFromForm"
      - assertVisible: "usernameFromForm"
      - assertVisible: ${maestro.copiedText}
