appId: com.duckduckgo.mobile.android
---

# Delete login
- tapOn: "More options"
- tapOn: "Delete"
- tapOn: "Delete"