appId: com.duckduckgo.mobile.android
---

# manually add an existing password
- runFlow: access_passwords_screen.yaml
- tapOn:
    id: addLoginManually
- tapOn: "Username"
- inputText: "existingUser"
- tapOn: "Password"
- inputText: "existingPassword"
- tapOn: "Website URL"
- inputText: "autofill.me"
- tapOn:
    id: view_menu_save
    retryTapIfNoChange: false
- tapOn: "Navigate up"
- tapOn: "Navigate up"