appId: com.duckduckgo.mobile.android
name: "Autofill: Search credentials"
---
# Pre-requisite: the user is viewing the password manager screen with some saved passwords added by a previous test step, on an autofill-eligible device

- runFlow:
    when:
      visible: "Help us improve!"
    commands:
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/close"

- runFlow:
    when:
      visible: "Sync & Back Up Your Passwords"
    commands:
      - tapOn: "No thanks"

- runFlow:
    when:
      visible: "Bring your passwords from

        Google to DuckDuckGo"
    commands:
        - tapOn:
            id: "com.duckduckgo.mobile.android:id/close"


- tapOn:
    id: searchLogins

- assertVisible: user

- tapOn:
    id: "omnibarTextInput|inputField"
- inputText: "no match"

- assertVisible: "No results for.*"

- eraseText

- tapOn:
      id: "omnibarTextInput|inputField"
- inputText: "192"

- assertVisible: 192.168.0.100

- tapOn: "Navigate up"